tests/bad/override_method_without_base.glaz
struct St {
}

impl St {
    @[override]
    fn x(&self) {}
}

fn main() {}
